# freeorion

./: .appveyor.yml  .cmake-format.json  .gitattributes  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .travis.yml  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog-052.md  ChangeLog.md  License.DejaVu  License.Vera  Makefile  Makefile.am  OISInput.cfg  README.md  RELEASE-NOTES-V01.txt  RELEASE-NOTES-V02.txt  RELEASE-NOTES-V03.txt  SConscript  SConstruct  appveyor.yml  autogen.sh  blackholegen.patch  build_config.py  build_support.py  changelog.txt  changelog_scratchpad  configure.ac  createMakefile.pl  create_commonfilesinc.pl  cvs  freeorion.appdata.xml  freeorion.desktop  mkauto.sh  ogre_plugins.cfg  ogre_plugins.cfg.in  org.freeorion.appdata.xml  (+6 more)
GG/: CMakeLists.txt  Config.h.in  GiGi.pc.in  GiGiOgre.pc.in  GiGiSDL.pc.in  INSTALLING  PACKAGING  README
GG/GG/: AdamDlg.h  AdamGlue.h  AdamParser.h  AlignmentFlags.h  Base.h  BrowseInfoWnd.h  Button.h  CMakeLists.txt  Clipboard.h  Clipboard_Generic.h  Clipboard_Windows.h  Clr.h  ClrConstants.h  Config.h  Control.h  Cursor.h  DeferredLayout.h  DrawUtil.h  DropDownList.h  DynamicGraphic.h  Edit.h  Enum.h  EveGlue.h  EveLayout.h  EveParser.h  EventPump.h  Exception.h  Export.h  ExpressionParser.h  ExpressionWriter.h  Flags.h  Font.h  FontFwd.h  GGFwd.h  GLClientAndServerBuffer.h  GUI.h  GroupBox.h  Layout.h  Lexer.h  LexerFwd.h  (+37 more)
GG/cmake/: Config.cmake  Config.h.in  FindOGRE.cmake  FindOIS.cmake  GiGi.pc.in  GiGiOgre.pc.in  GiGiSDL.pc.in  UseCodeCoverage.cmake  Util.cmake
GG/doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  GGDoc.txt
GG/libltdl/: Makefile.in  acinclude.m4  aclocal.m4  configure  ltdl.c
GG/src/: AdamDlg.cpp  AdamGlue.cpp  AdamParser.cpp  AlignmentFlags.cpp  Base.cpp  BrowseInfoWnd.cpp  Button.cpp  CMakeLists.txt  Clipboard_Generic.cpp  Clipboard_Windows.cpp  ClrConstants.cpp  Control.cpp  Cursor.cpp  DefaultFont.h  DeferredLayout.cpp  DrawUtil.cpp  DropDownList.cpp  DynamicGraphic.cpp  Edit.cpp  EveGlue.cpp  EveLayout.cpp  EveParser.cpp  EventPump.cpp  ExpressionParser.cpp  ExpressionWriter.cpp  Font.cpp  GLClientAndServerBuffer.cpp  GUI.cpp  GroupBox.cpp  Layout.cpp  Lexer.cpp  ListBox.cpp  Measure.cpp  Menu.cpp  MultiEdit.cpp  Plugin.cpp  PluginInterface.cpp  PtRect.cpp  ReportParseError.cpp  Scale.cpp  (+15 more)
GG/test/: CMakeLists.txt  CTestConfig.cmake  EveLayout_vs_Adobe_Begin.html  TestAdamParser.cpp  TestAdamWriter.cpp  TestEveLayout.cpp  TestEveParser.cpp  TestEveWriter.cpp  TestExpressionParser.cpp  TestExpressionWriter.cpp  TestLexer.cpp  TestStrongIntegralTypedef.cpp  TestStrongSizeTypedef.cpp  TestingUtils.h  adam_test_expressions_tokens  eve_test_expressions_tokens  test_expressions
GG/tutorial/: CMakeLists.txt  adam.cpp  controls.cpp  eve.cpp  minimal.cpp
PagedGeometry/: CMakeLists.txt
PagedGeometry/include/: BatchPage.h  BatchedGeometry.h  GrassLoader.h  ImpostorPage.h  MersenneTwister.h  PagedGeometry.h  PagedGeometryConfig.h  PropertyMaps.h  RandomTable.h  StaticBillboardSet.h  TreeLoader2D.h  TreeLoader3D.h  WindBatchPage.h  WindBatchedGeometry.h
PagedGeometry/source/: BatchPage.cpp  BatchedGeometry.cpp  GrassLoader.cpp  ImpostorPage.cpp  PagedGeometry.cpp  PropertyMaps.cpp  StaticBillboardSet.cpp  TreeLoader2D.cpp  TreeLoader3D.cpp  (+2 more)
UI/: About.cpp  About.h  AccordionPanel.cpp  AccordionPanel.h  AnimatedGraphic.cpp  AnimatedGraphic.h  AnimatedTexture.cpp  AnimatedTexture.h  BSpline.cpp  BSpline.h  BuildDesignatorWnd.cpp  BuildDesignatorWnd.h  BuildingsPanel.cpp  BuildingsPanel.h  CMakeLists.txt  CUIControls.cpp  CUIControls.h  CUIDrawUtil.cpp  CUIDrawUtil.h  CUILinkTextBlock.cpp  CUILinkTextBlock.h  CUISlider.h  CUISpin.h  CUIStyle.cpp  CUIStyle.h  CUITabbedPages.cpp  CUITabbedPages.h  CUIWnd.cpp  CUIWnd.h  CUI_Wnd.cpp  CUI_Wnd.h  CensusBrowseWnd.cpp  CensusBrowseWnd.h  ChatWnd.cpp  ChatWnd.h  ClientUI.cpp  ClientUI.h  CollisionMeshConverter.cpp  CollisionMeshConverter.h  CombatCamera.cpp  (+138 more)
check/: CMakeLists.txt  README.md  checkSpeciesTags.py  check_changed_files.py  check_data_reading_usages.py  check_presense.py  clang-format  clang-format-report.py  st-tool.py
client/: CMakeLists.txt  ClientApp.cpp  ClientApp.h  ClientFSMEvents.cpp  ClientFSMEvents.h  ClientNetworking.cpp  ClientNetworking.h  ConfigFileProcess.cpp  ConfigFileProcess.h  Makefile.am
doc/: CMakeLists.txt  Doxyfile.in  all_tags.dox  all_tags.dox.in  apidoc-commit-message.in  content_tags.md  content_tags_alias.dox  labels.md  tag_filter.py  tag_parser.py
log4cpp/: CMakeLists.txt  COPYING
parse/: AlignmentsParser.cpp  ArithmeticRules.cpp  BuildingsParser.cpp  CMakeLists.txt  CommonParams.h  CommonParamsParser.cpp  CommonParamsParser.h  ConditionParser.cpp  ConditionParser.h  ConditionParser1.cpp  ConditionParser1.h  ConditionParser2.cpp  ConditionParser2.h  ConditionParser3.cpp  ConditionParser3.h  ConditionParser4.cpp  ConditionParser4.h  ConditionParser5.cpp  ConditionParser5.h  ConditionParser6.cpp  ConditionParser6.h  ConditionParser7.cpp  ConditionParser7.h  ConditionParserImpl.h  ConditionPythonParser.cpp  ConditionPythonParser.h  ConditionsPythonModuleParser.cpp  ConditionsPythonModuleParser.h  Double.cpp  Double.h  DoubleComplexValueRefParser.cpp  DoubleValueRefParser.cpp  DummyParsers.cpp  EffectParser.cpp  EffectParser.h  EffectParser1.cpp  EffectParser1.h  EffectParser2.cpp  EffectParser2.h  EffectParser3.cpp  (+85 more)
python/: CMakeLists.txt  CommonFramework.cpp  CommonFramework.h  CommonWrappers.h  ConfigWrapper.cpp  EmpireWrapper.cpp  EnumWrapper.cpp  LoggingWrapper.cpp  PythonBase.cpp  PythonBase.h  PythonEmpireWrapper.cpp  PythonEnumWrapper.cpp  PythonLoggingWrapper.cpp  PythonSetWrapper.h  PythonUniverseWrapper.cpp  PythonWrappers.h  SetWrapper.h  UniverseWrapper.cpp  map_indexing_suite_safe.hpp
server/: CMakeLists.txt  Makefile  Makefile.am  SaveLoad.cpp  SaveLoad.h  Server.dev  ServerApp.cpp  ServerApp.h  ServerFSM.cpp  ServerFSM.h  ServerFramework.cpp  ServerFramework.h  ServerNetworking.cpp  ServerNetworking.h  ServerWrapper.cpp  ServerWrapper.h  UniverseGenerator.cpp  UniverseGenerator.h  dmain.cpp
(+7724 files in other folders)
